# dynamic-rag-demos

./: .gitignore  README.md  pyproject.toml
dynamic_rag_demos/: file_management.py  web_assistant.py
slides/: slides.pptx
